--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Haris</title>
+    <title>Jagannadh</title>
     <link rel="stylesheet" href="Libraries/swiper-bundle.min.css" />
     <link rel="stylesheet" href="Css/style.css" />
   </head>
@@ -11,7 +11,7 @@
     <!-- header  -->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav-logo">Haris Ahmad</a>
+        <a href="#" class="nav-logo">Puri jagannadh Ulapalli</a>
 
         <div class="nav-menu" id="nav-menu">
           <ul class="nav-list grid">
@@ -66,21 +66,21 @@
           <div class="home-content grid">
             <div class="home-social">
               <a
-                href="https://www.linkedin.com/in/harisahmad59/"
+                href="https://https://www.linkedin.com/in/puri-jagannadh-ulapalli-b18104253"
                 target="_blank"
                 class="home-social-icon"
               >
                 <i class="fa-brands fa-linkedin-in"></i>
               </a>
               <a
-                href="https://www.instagram.com/codehype_/"
+                href="https://https://instagram.com/viper_jaggu?igshid=MTNiYzNiMzkwZA==/"
                 target="_blank"
                 class="home-social-icon"
               >
                 <i class="fa-brands fa-instagram"></i>
               </a>
               <a
-                href="https://github.com/harisahmad59"
+                href="https://https://github.com/JAGANNADH18"
                 target="_blank"
                 class="home-social-icon"
               >
@@ -121,7 +121,7 @@
             </div>
 
             <div class="home-data">
-              <h1 class="home-title">Hi, I am Haris Ahmad</h1>
+              <h1 class="home-title">Hi, I am Puri jagannadh Ulapalli</h1>
               <h3 class="home-subtitle">Frontend Developer</h3>
               <p class="home-description">
                 Passionate frontend developer specializing in pixel-perfect web
@@ -248,12 +248,12 @@
               <div class="qualification-data">
                 <div>
                   <h3 class="qualification-title">
-                    Computer Science Engineering
+                    Electronics and Communication Engineering
                   </h3>
-                  <span class="qualification-subtitle">GCET Kashmir</span>
+                  <span class="qualification-subtitle">GIET Rajahmundry</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2022 - 2026
+                    2021 - 2025
                   </div>
                 </div>
                 <div>
@@ -268,18 +268,18 @@
                 <div></div>
 
                 <div>
-                  <span class="qualification-round"></span>
+                 <span class="qualification-round"></span>
                   <span class="qualification-line"></span>
                 </div>
 
                 <div>
                   <h3 class="qualification-title">
-                    Full Stack Web Development
+                    CSS and Javascript
                   </h3>
                   <span class="qualification-subtitle">Udemy</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2021 - 2022
+                    2022 - 2023
                   </div>
                 </div>
               </div>
@@ -288,11 +288,11 @@
 
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">Frontend Development</h3>
+                  <h3 class="qualification-title">Technical Support Fundamentals</h3>
                   <span class="qualification-subtitle">Coursera</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2021 - 2022
+                    2022 - 2023
                   </div>
                 </div>
                 <div>
@@ -310,11 +310,11 @@
                   <!-- <span class="qualification-line"></span> -->
                 </div>
                 <div>
-                  <h3 class="qualification-title">Digital Marketing</h3>
+                  <h3 class="qualification-title">Generative AI</h3>
                   <span class="qualification-subtitle">Google</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2019 - 2020
+                    2022 - 2023
                   </div>
                 </div>
               </div>
@@ -325,11 +325,11 @@
               <!-- qualifi 1 -->
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">Full Stack Developer</h3>
-                  <span class="qualification-subtitle">Fiverr</span>
+                  <h3 class="qualification-title">Project Management Essentials</h3>
+                  <span class="qualification-subtitle">Linkedin Learning</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2022 - Present
+                    2023  - Present
                   </div>
                 </div>
                 <div>
@@ -349,11 +349,11 @@
                 </div>
 
                 <div>
-                  <h3 class="qualification-title">Ui/Ux Designer</h3>
+                  <h3 class="qualification-title">Ui/</h3>
                   <span class="qualification-subtitle">Freelancer</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2022 - Present
+                    2023 - Present
                   </div>
                 </div>
               </div>
@@ -366,7 +366,7 @@
                   <span class="qualification-subtitle">YouTube</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2019 - Present
+                    2023 - Present
                   </div>
                 </div>
                 <div>
@@ -565,7 +565,7 @@
                   customers effectively.
                 </p>
                 <a
-                  href="https://github.com/harisahmad59/CodeHype-Responsive-Website"
+                  href="https://github.com/JAGANNADH18-Responsive-Website"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -584,7 +584,7 @@
                   flawless user experience.
                 </p>
                 <a
-                  href="https://github.com/harisahmad59/Hypefolio"
+                  href="https://github.com/JAGANNADH18/Portfolio"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -603,7 +603,7 @@
                   your audience.
                 </p>
                 <a
-                  href="https://github.com/harisahmad59/Hypefolio"
+                  href="https://github.com/JAGANNADH18/Portfolio"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -705,7 +705,7 @@
                 </div>
               </div>
               <p class="testimonial-description">
-                Haris, your exceptional talent and dedication shine through in
+                Jagannadh,your exceptional talent and dedication shine through in
                 the stunning website you've crafted for me. It exceeds my
                 expectations in every way, and I'm truly grateful for your
                 outstanding work!
@@ -722,7 +722,7 @@
                   />
 
                   <div>
-                    <h3 class="testimonial-name">Faheem Ahmad</h3>
+                    <h3 class="testimonial-name">Bunny</h3>
                     <span class="testimonial-client">Client</span>
                   </div>
                 </div>
@@ -736,7 +736,7 @@
                 </div>
               </div>
               <p class="testimonial-description">
-                Harris is a remarkable frontend developer with an eye for detail
+                Jagannadh is a remarkable frontend developer with an eye for detail
                 and a knack for creating visually stunning user interfaces.
               </p>
             </div>
@@ -758,10 +758,10 @@
               <div>
                 <h3 class="contact-title">Email</h3>
                 <a
-                  href="mailto:business.codehype@gmail.com"
+                  href=""
                   target="_blank"
                   class="contact-subtitle"
-                  >business.codehype@gmail.com</a
+                  >business.jagannadhulapalli@gmail.com</a
                 >
               </div>
             </div>
@@ -771,9 +771,9 @@
                 <h3 class="contact-title">Linkedin</h3>
                 <a
                   class="contact-subtitle"
-                  href="https://www.linkedin.com/in/harisahmad59/"
+                  href="https:/"
                   target="_blank"
-                  >@harisahmad59</a
+                  >@Jagannadh18</a
                 >
               </div>
             </div>
@@ -786,7 +786,7 @@
         <div class="footer-bg">
           <div class="footer-container container grid">
             <div>
-              <h1 class="footer-title">Haris Ahmad</h1>
+              <h1 class="footer-title">Puri jagannadh Ulapalli</h1>
               <span class="footer-subtitle">Frontend developer</span>
             </div>
             <ul class="footer-links">
@@ -803,14 +803,14 @@
 
             <div class="footer-socials">
               <a
-                href="https://www.linkedin.com/in/harisahmad59/"
+                href="https://www.linkedin.com/in/puri-jagannadh-ulapalli-b18104253/"
                 target="_blank"
                 class="footer-social"
               >
                 <i class="fa-brands fa-linkedin-in"></i>
               </a>
               <a
-                href="https://github.com/harisahmad59"
+                href="https://github.com/JAGANNADH18"
                 target="_blank"
                 target="_blank"
                 class="footer-social"
@@ -818,7 +818,7 @@
                 <i class="fa-brands fa-github"></i>
               </a>
               <a
-                href="https://www.instagram.com/codehype_/"
+                href="https://https://instagram.com/viper_jaggu?igshid=MTNiYzNiMzkwZA=="
                 target="_blank"
                 class="footer-social"
               >
@@ -826,7 +826,7 @@
               </a>
             </div>
           </div>
-          <p class="footer-copy">By Haris Ahmad - CodeHype</p>
+          <p class="footer-copy">By Puri jagannadh Ulapalli</p>
         </div>
       </footer>
     </main>
