--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                 </div>
               </div>
               <p class="testimonial-description">
-                The website you designed, Haris, is a testament to your
+                The website you designed,is a testament to your
                 creativity and expertise. Every detail showcases your dedication
                 to delivering excellence. Thank you for bringing my vision to
                 life!
