--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                 <i class="fa-brands fa-github"></i>
               </a>
               <a
-                href="https://https://instagram.com/viper_jaggu?igshid=MTNiYzNiMzkwZA=="
+                href="https://instagram.com/viper_jaggu?igshid=MTNiYzNiMzkwZA=="
                 target="_blank"
                 class="footer-social"
               >
