--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
           <div class="home-content grid">
             <div class="home-social">
               <a
-                href="https://https://www.linkedin.com/in/puri-jagannadh-ulapalli-b18104253"
+                href="https://www.linkedin.com/in/puri-jagannadh-ulapalli-b18104253"
                 target="_blank"
                 class="home-social-icon"
               >
                 <i class="fa-brands fa-linkedin-in"></i>
               </a>
               <a
-                href="https://https://instagram.com/viper_jaggu?igshid=MTNiYzNiMzkwZA==/"
+                href="https://instagram.com/viper_jaggu?igshid=MTNiYzNiMzkwZA==/"
                 target="_blank"
                 class="home-social-icon"
               >
                 <i class="fa-brands fa-instagram"></i>
               </a>
               <a
-                href="https://https://github.com/JAGANNADH18"
+                href="https://github.com/JAGANNADH18"
                 target="_blank"
                 class="home-social-icon"
               >
@@ -163,21 +163,21 @@
 
             <div class="about-info">
               <div>
-                <span class="about-info-title">02+</span>
+                <span class="about-info-title">01+</span>
                 <span class="about-info-name"
                   >Years <br />
                   experience</span
                 >
               </div>
               <div>
-                <span class="about-info-title">20+</span>
+                <span class="about-info-title">2+</span>
                 <span class="about-info-name"
                   >Completed <br />
                   project</span
                 >
               </div>
               <div>
-                <span class="about-info-title">06+</span>
+                <span class="about-info-title">0+</span>
                 <span class="about-info-name"
                   >Companies <br />
                   worked</span
