--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <h1 class="home-title">Hi, I am Puri jagannadh Ulapalli</h1>
               <h3 class="home-subtitle">Frontend Developer</h3>
               <p class="home-description">
-                Passionate frontend developer specializing in pixel-perfect web
+                Passionate frontend developer specializing in perfect web
                 design.
               </p>
               <a href="#contact" class="button button-flex">
