--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="about-buttons">
               <a
                 download=""
-                href="/Assets/Resume.pdf"
+                href="/Assets/Puri jagannadh Resume N"
                 class="button button-flex"
               >
                 Download Resume<i
@@ -206,18 +206,10 @@
         <span class="section-subtitle">My Technical Skills</span>
         <div class="skills-content container">
           <div class="skills-name">JavaScript</div>
-          <div class="skills-name">React JS</div>
-          <div class="skills-name">Tailwind CSS</div>
-          <div class="skills-name">Bootstrap</div>
           <div class="skills-name">CSS</div>
-          <div class="skills-name">SASS</div>
-          <div class="skills-name">Figma</div>
-          <div class="skills-name">Node JS</div>
-          <div class="skills-name">Express JS</div>
-          <div class="skills-name">MongoDB</div>
-          <div class="skills-name">Photoshop</div>
-          <div class="skills-name">Python</div>
-        </div>
+          <div class="skills-name">Java</div>
+          <div class="skills-name">Html</div>
+      </div>
       </section>
       <section class="qualification section">
         <h2 class="section-title">Qualification</h2>
