--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="about-buttons">
               <a
                 download=""
-                href="/Assets/Puri jagannadh Resume N"
+                href="/Assets/Puri jagannadh Resume N.pdf"
                 class="button button-flex"
               >
                 Download Resume<i
@@ -546,26 +546,7 @@
 
         <div class="portfolio-container container swiper-container">
           <div class="swiper-wrapper">
-            <!-- project1  -->
-            <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project1.svg" alt="" class="portfolio-img" />
-
-              <div class="portfolio-data">
-                <h3 class="portfolio-title">Business Websites</h3>
-                <p class="portfolio-description">
-                  Dynamic business sites that reflect your brand and engage
-                  customers effectively.
-                </p>
-                <a
-                  href="https://github.com/JAGANNADH18-Responsive-Website"
-                  target="_blank"
-                  class="button button-flex button-small portfolio-button"
-                  >Project Link
-                  <i class="fa-solid fa-arrow-right button-icon"></i
-                ></a>
-              </div>
-            </div>
-            <!-- project2  -->
+          <!-- project1  -->
             <div class="portfolio-content grid swiper-slide">
               <img src="Assets/project2.svg" alt="" class="portfolio-img" />
 
@@ -584,161 +565,7 @@
                 ></a>
               </div>
             </div>
-            <!-- project3  -->
-            <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project3.svg" alt="" class="portfolio-img" />
-
-              <div class="portfolio-data">
-                <h3 class="portfolio-title">Landing Pages</h3>
-                <p class="portfolio-description">
-                  Compelling landing pages that drive conversions and engage
-                  your audience.
-                </p>
-                <a
-                  href="https://github.com/JAGANNADH18/Portfolio"
-                  target="_blank"
-                  class="button button-flex button-small portfolio-button"
-                  >Project Link
-                  <i class="fa-solid fa-arrow-right button-icon"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-angles">
-            <div class="swiper-button-next">
-              <i class="fa-solid fa-angle-right swiper-icon"></i>
-            </div>
-            <div class="swiper-button-prev">
-              <i class="fa-solid fa-angle-left swiper-icon"></i>
-            </div>
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-      </section>
-      <section class="project-contact section">
-        <div class="project-bg">
-          <div class="project-container container grid">
-            <div class="project-data">
-              <h2 class="project-title">Do you have a new project?</h2>
-              <p class="project-description">
-                Contact me now and get a 50% discount on your new project.
-              </p>
-              <a href="#contact" class="button button-flex button-white"
-                >Contact Me
-                <i
-                  class="fa-regular fa-comment-dots project-icon button-icon"
-                ></i>
-              </a>
-            </div>
-            <img src="Assets/Icons/contactme.png" alt="" class="project-img" />
-          </div>
-        </div>
-      </section>
-      <!-- testimonial -->
-      <section class="testimonial section">
-        <h2 class="section-title">Testimonial</h2>
-        <span class="section-subtitle">My Client saying</span>
-
-        <div class="testimonial-container container swiper-container">
-          <div class="swiper-wrapper">
-            <!-- testimonial 1  -->
-            <div class="testimonial-content swiper-slide">
-              <div class="testimonial-data">
-                <div class="testimonial-header">
-                  <img
-                    src="Assets/Icons/testimonial1.png"
-                    alt=""
-                    class="testimonial-img"
-                  />
-
-                  <div>
-                    <h3 class="testimonial-name">Malik Asif</h3>
-                    <span class="testimonial-client">Client</span>
-                  </div>
-                </div>
-
-                <div>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                </div>
-              </div>
-              <p class="testimonial-description">
-                The website you designed,is a testament to your
-                creativity and expertise. Every detail showcases your dedication
-                to delivering excellence. Thank you for bringing my vision to
-                life!
-              </p>
-            </div>
-            <!-- testimonia 2 -->
-            <div class="testimonial-content swiper-slide">
-              <div class="testimonial-data">
-                <div class="testimonial-header">
-                  <img
-                    src="Assets/Icons/testimonial2.png"
-                    alt=""
-                    class="testimonial-img"
-                  />
-
-                  <div>
-                    <h3 class="testimonial-name">Faizan Farooq</h3>
-                    <span class="testimonial-client">Client</span>
-                  </div>
-                </div>
-
-                <div>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                </div>
-              </div>
-              <p class="testimonial-description">
-                Jagannadh,your exceptional talent and dedication shine through in
-                the stunning website you've crafted for me. It exceeds my
-                expectations in every way, and I'm truly grateful for your
-                outstanding work!
-              </p>
-            </div>
-            <!-- testimonial  3-->
-            <div class="testimonial-content swiper-slide">
-              <div class="testimonial-data">
-                <div class="testimonial-header">
-                  <img
-                    src="Assets/Icons/testimonial3.png"
-                    alt=""
-                    class="testimonial-img"
-                  />
-
-                  <div>
-                    <h3 class="testimonial-name">Bunny</h3>
-                    <span class="testimonial-client">Client</span>
-                  </div>
-                </div>
-
-                <div>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                  <i class="fa-regular fa-star testimonial-icon"></i>
-                </div>
-              </div>
-              <p class="testimonial-description">
-                Jagannadh is a remarkable frontend developer with an eye for detail
-                and a knack for creating visually stunning user interfaces.
-              </p>
-            </div>
-          </div>
-
-          <div class="swiper-pagination swiper-pagination-testimonial"></div>
-        </div>
-      </section>
-
-      <!-- contact me  -->
+            <!-- contact me  -->
       <section class="contact section" id="contact">
         <h2 class="section-title">Contact me</h2>
         <span class="section-subtitle">Get in touch</span>
