--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
               <div>
                 <h3 class="contact-title">Email</h3>
                 <a
-                  href=""
+                  href="jagannadhulapalli@gmail.com"
                   target="_blank"
                   class="contact-subtitle"
                   >business.jagannadhulapalli@gmail.com</a
@@ -590,9 +590,9 @@
                 <h3 class="contact-title">Linkedin</h3>
                 <a
                   class="contact-subtitle"
-                  href="https:/"
+                  href="https://www.linkedin.com/in/puri-jagannadh-ulapalli-b18104253"
                   target="_blank"
-                  >@Jagannadh18</a
+                  >https://www.linkedin.com/in/puri-jagannadh-ulapalli-b18104253</a
                 >
               </div>
             </div>
