--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="about-buttons">
               <a
                 download=""
-                href="/Assets/Puri jagannadh Resume N.pdf"
+                href="Portfolio/Assets/Purijagannadh Resume N.pdf"
                 class="button button-flex"
               >
                 Download Resume<i
@@ -565,6 +565,8 @@
                 ></a>
               </div>
             </div>
+          </section>
+            
             <!-- contact me  -->
       <section class="contact section" id="contact">
         <h2 class="section-title">Contact me</h2>
