--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                   href="jagannadhulapalli@gmail.com"
                   target="_blank"
                   class="contact-subtitle"
-                  >business.jagannadhulapalli@gmail.com</a
+                  >jagannadhulapalli@gmail.com</a
                 >
               </div>
             </div>
