--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="about-buttons">
               <a
                 download=""
-                href="Portfolio/Assets/Purijagannadh Resume N.pdf"
+                href="Assets/Puri jagannadh Resume N.pdf"
                 class="button button-flex"
               >
                 Download Resume<i
