--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
               <div>
                 <h3 class="contact-title">Email</h3>
                 <a
-                  href="jagannadhulapalli@gmail.com"
+                  href="mailto:jagannadhulapalli@gmail.com">jagannadhulapalli@gmail.com</a>
                   target="_blank"
                   class="contact-subtitle"
                   >jagannadhulapalli@gmail.com</a
