--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
                 </div>
 
                 <div>
-                  <h3 class="qualification-title">Ui/</h3>
-                  <span class="qualification-subtitle">Freelancer</span>
+                  <h3 class="qualification-title">Salesforce Administrator</h3>
+                  <span class="qualification-subtitle">Salesforce</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
                     2023 - Present
