--- a/index.html
+++ b/index.html
@@ -205,10 +205,11 @@
         <h2 class="section-title">Skills</h2>
         <span class="section-subtitle">My Technical Skills</span>
         <div class="skills-content container">
-          <div class="skills-name">JavaScript</div>
-          <div class="skills-name">CSS</div>
+          <div class="skills-name">Python</div>
           <div class="skills-name">Java</div>
           <div class="skills-name">Html</div>
+          <div class="skills-name">Css</div>
+          <div class="skills-name">Javascript</div>
       </div>
       </section>
       <section class="qualification section">
@@ -266,9 +267,9 @@
 
                 <div>
                   <h3 class="qualification-title">
-                    CSS and Javascript
+                    Intermediatte
                   </h3>
-                  <span class="qualification-subtitle">Udemy</span>
+                  <span class="qualification-subtitle">Sasi Junior College</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
                     2022 - 2023
@@ -280,8 +281,8 @@
 
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">Technical Support Fundamentals</h3>
-                  <span class="qualification-subtitle">Coursera</span>
+                  <h3 class="qualification-title">SSC</h3>
+                  <span class="qualification-subtitle">Annapurna High School</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
                     2022 - 2023
@@ -302,11 +303,11 @@
                   <!-- <span class="qualification-line"></span> -->
                 </div>
                 <div>
-                  <h3 class="qualification-title">Generative AI</h3>
-                  <span class="qualification-subtitle">Google</span>
+                  <h3 class="qualification-title"></h3>
+                  <span class="qualification-subtitle"></span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2022 - 2023
+                    
                   </div>
                 </div>
               </div>
@@ -354,8 +355,8 @@
 
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">Content Creator</h3>
-                  <span class="qualification-subtitle">YouTube</span>
+                  <h3 class="qualification-title">Technical Support Fundamentals</h3>
+                  <span class="qualification-subtitle">Coursera</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
                     2023 - Present
