--- a/index.html
+++ b/index.html
@@ -293,8 +293,9 @@
                   <span class="qualification-line"></span>
                 </div>
               </div>
-              
-        <!-- qualific content 2  -->
+            </div>
+          </section>
+              <!-- qualific content 2  -->
             <div class="qualification-content" data-content id="work">
               <!-- qualifi 1 -->
               <div class="qualification-data">
