--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@ m<!DOCTYPE html>
               <a href="#skills" class="nav-link"
                 ><i class="fa-solid fa-file nav-icon"></i> Skills</a
               >
+            </li>
+            <li class="nav-item">
+              <a href="#Qualification" class="nav-link"
+                ><i class="fa-solid fa-file nav-icon"></i> Qualification</a
+              >
            </li>
             <li class="nav-item">
               <a href="#portfolio" class="nav-link"
