--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ m<!DOCTYPE html>
               >
             </li>
             <li class="nav-item">
-              <a href="#Qualification" class="nav-link"
+              <a href="#Qualification"=class="nav-link"
                 ><i class="fa-solid fa-file nav-icon"></i> Qualification</a
               >
            </li>
             <li class="nav-item">
-              <a href="#portfolio" class="nav-link"
+              <a href="#Projects" class="nav-link"
                 ><i class="fa-solid fa-image nav-icon"></i> Projects</a
               >
             </li>
