--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ m<!DOCTYPE html>
               >
             </li>
             <li class="nav-item">
-              <a href="#Qualification"=class="nav-link"
+              <a href="#Qualification" class="nav-link"
                 ><i class="fa-solid fa-file nav-icon"></i> Qualification</a
               >
            </li>
