--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ m<!DOCTYPE html>
             </li>
             <li class="nav-item">
               <a href="#Qualification" class="nav-link"
-                ><i class="fa-solid fa-file nav-icon"></i> Qualification</a
+                ><i class="fa-solid fa-study nav-icon"></i> Qualification</a
               >
            </li>
             <li class="nav-item">
