--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ m<!DOCTYPE html>
             </li>
             <li class="nav-item">
               <a href="#Qualification" class="nav-link"
-                ><i class="fa-solid fa-study nav-icon"></i> Qualification</a
+                ><i class="fa-solid fa- nav-icon"></i> Qualification</a
               >
            </li>
             <li class="nav-item">
-              <a href="#Projects" class="nav-link"
+              <a href="#portfolio" class="nav-link"
                 ><i class="fa-solid fa-image nav-icon"></i> Projects</a
               >
             </li>
