--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ m<!DOCTYPE html>
               >
            </li>
             <li class="nav-item">
-              <a href="#portfolio" class="nav-link"
+              <a href="#Portfolio" class="nav-link"
                 ><i class="fa-solid fa-image nav-icon"></i> Projects</a
               >
             </li>
