--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <div class="home-data">
               <h1 class="home-title">Hi, I am Puri jagannadh Ulapalli</h1>
-              <h3 class="home-subtitle">Frontend Developer</h3>
+              <h3 class="home-subtitle">Graduate Trainee</h3>
               <p class="home-description">
                 Passionate frontend developer specializing in perfect web
                 design.
