--- a/index.html
+++ b/index.html
@@ -123,9 +123,6 @@
             <div class="home-data">
               <h1 class="home-title">Hi, I am Puri jagannadh Ulapalli</h1>
               <h3 class="home-subtitle">Graduate Trainee</h3>
-              <p class="home-description">
-                Passionate frontend developer specializing in perfect web
-                design.
               </p>
               <a href="#contact" class="button button-flex">
                 Contact Me <i class="fa-regular fa-envelope button-icon"></i>
@@ -152,13 +149,7 @@
 
           <div class="about-data">
             <p class="about-description">
-              An accomplished Frontend Developer with a passion for creating
-              seamless user experiences. With a solid foundation in HTML, CSS,
-              and JavaScript, I specialize in crafting visually captivating and
-              intuitively navigable websites. Leveraging my expertise in
-              responsive design and UI/UX principles, I bring concepts to life,
-              ensuring each project is a masterpiece of precision and
-              functionality.
+              My name is Puri Jagannadh, i hail from Tapeswaram, Andhra Pradesh.Growing up in a family of Doctor , I develop a strong intrest for the business world and therefore completed my bachelor's in Electronics and Communication Engineering from Godavari institute of Engineering and Technology, Rajahmundry.I had completed my intermediate at sasi junior College with 75 percentage and I am the Number one student in my Tenth class studies who had achieved 10 gpa points from Annapurna High school, Mandapeta.I also had the opportunity to work with a start up company as a Human Resources Management intern at holograd , and I had also worked as a Administrator at Salesforce for 3 months of internship.Im passionate about sports like playing cricket, badminton.And I'm creative , driven , and exited to apply my skills to real-world projects.
             </p>
 
             <div class="about-info">
