--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="about-buttons">
               <a
                 download=""
-                href="Assets/Puri jagannadh Resume N.pdf"
+                href="Assets/Puri_jagannadh_ulapalli 5.pdf"
                 class="button button-flex"
               >
                 Download Resume<i
