--- a/index.html
+++ b/index.html
@@ -198,9 +198,8 @@
         <div class="skills-content container">
           <div class="skills-name">Python</div>
           <div class="skills-name">Java</div>
-          <div class="skills-name">Html</div>
-          <div class="skills-name">Css</div>
-          <div class="skills-name">Javascript</div>
+          <div class="skills-name">Sql</div>
+          <div class="skills-name">Google Cloud Platform</div>
       </div>
       </section>
       <section class="qualification section">
