--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@
               <!-- qualifi 1 -->
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">Project Management Essentials</h3>
-                  <span class="qualification-subtitle">Linkedin Learning</span>
+                  <h3 class="qualification-title">Google Cloud Platform</h3>
+                  <span class="qualification-subtitle">Google Cloud</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2023  - Present
+                    2025  - Present
                   </div>
                 </div>
                 <div>
@@ -314,11 +314,11 @@
                 </div>
 
                 <div>
-                  <h3 class="qualification-title">Salesforce Administrator</h3>
-                  <span class="qualification-subtitle">Salesforce</span>
+                  <h3 class="qualification-title">Human Resources Intern</h3>
+                  <span class="qualification-subtitle">Holograd</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2023 - Present
+                    2024 - Present
                   </div>
                 </div>
               </div>
@@ -327,8 +327,8 @@
 
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">Technical Support Fundamentals</h3>
-                  <span class="qualification-subtitle">Coursera</span>
+                  <h3 class="qualification-title">Salesforce Administrator</h3>
+                  <span class="qualification-subtitle">Salesforce</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
                     2023 - Present
