--- a/index.html
+++ b/index.html
@@ -386,19 +386,6 @@
                 <a
                   href="mailto:jagannadhulapalli@gmail.com">jagannadhulapalli@gmail.com</a>
                >
-              </div>
-            </div>
-            <div class="contact-info">
-              <i class="fa-brands fa-linkedin-in contact-icon"></i>
-              <div>
-                <h3 class="contact-title">Linkedin</h3>
-                <a
-                  class="contact-subtitle"
-                  href="https://www.linkedin.com/in/puri-jagannadh-ulapalli-b18104253"
-                  target="_blank"
-              </div>
-            </div>
-          </div>
         </div>
       </section>
 
@@ -408,7 +395,7 @@
           <div class="footer-container container grid">
             <div>
               <h1 class="footer-title">Puri jagannadh Ulapalli</h1>
-              <span class="footer-subtitle">Frontend developer</span>
+              <span class="footer-subtitle">Graduate Trainee</span>
             </div>
             <ul class="footer-links">
              <li>
