--- a/index.html
+++ b/index.html
@@ -353,16 +353,16 @@
           <div class="swiper-wrapper">
           <!-- project1  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project2.svg" alt="" class="portfolio-img" />
+              <img src="Assets/project2.svg" alt="" class="" />
 
               <div class="portfolio-data">
-                <h3 class="portfolio-title">Portfolio Websites</h3>
+                <h3 class="portfolio-title">Portfolio</h3>
                 <p class="portfolio-description">
                   Impressive portfolio sites that showcase your talents with a
                   flawless user experience.
                 </p>
                 <a
-                  href="https://github.com/JAGANNADH18/Portfolio"
+                  href="https://github.com/JAGANNADH18/"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -399,7 +399,7 @@
             </div>
             <ul class="footer-links">
              <li>
-                <a href="#portfolio" class="footer-link">Portfolio</a>
+                <a href="#portfolio" class="footer-link">Projects</a>
               </li>
               <li>
                 <a href="#contact" class="footer-link">Contact</a>
