--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                   flawless user experience.
                 </p>
                 <a
-                  href="https://github.com/JAGANNADH18/"
+                  href="https://github.com/JAGANNADH18"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
