--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
           <div class="swiper-wrapper">
           <!-- project1  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project2.svg" alt="" class="" />
+              <img src="Assets/Portfolio.png" alt="" class="Portfolio.png" />
 
               <div class="portfolio-data">
                 <h3 class="portfolio-title">Portfolio</h3>
