--- a/index.html
+++ b/index.html
@@ -149,9 +149,7 @@
 
           <div class="about-data">
             <p class="about-description">
-              My name is Puri Jagannadh, i hail from Tapeswaram, Andhra Pradesh.Growing up in a family of Doctor , I develop a strong intrest for the business world and therefore completed my bachelor's in Electronics and Communication Engineering from Godavari institute of Engineering and Technology, Rajahmundry.I had completed my intermediate at sasi junior College with 75 percentage and I am the Number one student in my Tenth class studies who had achieved 10 gpa points from Annapurna High school, Mandapeta.I also had the opportunity to work with a start up company as a Human Resources Management intern at holograd , and I had also worked as a Administrator at Salesforce for 3 months of internship.Im passionate about sports like playing cricket, badminton.And I'm creative , driven , and exited to apply my skills to real-world projects.
-            </p>
-
+              As an ambitious student pursuing Bachelor of Technology at GIET Engineering College,I am passionate in IT industry with a strong foundation in Java language. I am committed to continuous learning and growth.I have successfully applied my knowledge in Human Resources Management internship, Salesforce Administrator Internship.I'm eager to connect, learn,and collaborate with professionals in your industry.Let's connect and explore opportunities together!
             <div class="about-info">
               <div>
                 <span class="about-info-title">01+</span>
