--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="home-content grid">
             <div class="home-social">
               <a
-                href="https://www.linkedin.com/in/puri-jagannadh-ulapalli-b18104253"
+                href="https://www.linkedin.com/in/puri-jagannadh-ulapalli"
                 target="_blank"
                 class="home-social-icon"
               >
@@ -122,7 +122,7 @@
 
             <div class="home-data">
               <h1 class="home-title">Hi, I am Puri jagannadh Ulapalli</h1>
-              <h3 class="home-subtitle">Graduate Trainee</h3>
+              <h3 class="home-subtitle">Cyber Security Trainee</h3>
               </p>
               <a href="#contact" class="button button-flex">
                 Contact Me <i class="fa-regular fa-envelope button-icon"></i>
@@ -149,7 +149,8 @@
 
           <div class="about-data">
             <p class="about-description">
-              As an ambitious student pursuing Bachelor of Technology at GIET Engineering College,I am passionate in IT industry with a strong foundation in Java language. I am committed to continuous learning and growth.I have successfully applied my knowledge in Human Resources Management internship, Salesforce Administrator Internship.I'm eager to connect, learn,and collaborate with professionals in your industry.Let's connect and explore opportunities together!
+              I am an aspiring cybersecurity Trainee with foundational training in Networking and Operating Systems, Network and Packet Analysis, Vulnerability Management, Basics of Python, Exploitation, Basics of Penetration Testing, Endpoint Security, Information
+Gathering, and Cryptography. Passionate about learning and building practical skills to protect digital systems from emerging threats.!
             <div class="about-info">
               <div>
                 <span class="about-info-title">01+</span>
