--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="about-data">
             <p class="about-description">
               I am an aspiring cybersecurity Trainee with foundational training in Networking and Operating Systems, Network and Packet Analysis, Vulnerability Management, Basics of Python, Exploitation, Basics of Penetration Testing, Endpoint Security, Information
-Gathering, and Cryptography. Passionate about learning and building practical skills to protect digital systems from emerging threats.!
+Gathering, and Cryptography. Passionate about learning and building practical skills to protect digital systems from emerging threats!
             <div class="about-info">
               <div>
                 <span class="about-info-title">01+</span>
@@ -178,7 +178,7 @@ Gathering, and Cryptography. Passionate about learning and building practical sk
             <div class="about-buttons">
               <a
                 download=""
-                href="Assets/Puri_jagannadh_ulapalli 5.pdf"
+                href="Assets/"
                 class="button button-flex"
               >
                 Download Resume<i
