--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Gathering, and Cryptography. Passionate about learning and building practical sk
             <div class="about-buttons">
               <a
                 download=""
-                href="Assets/"
+                href="Assets/Puri Jagannadh_CS4.pdf"
                 class="button button-flex"
               >
                 Download Resume<i
@@ -196,9 +196,14 @@ Gathering, and Cryptography. Passionate about learning and building practical sk
         <span class="section-subtitle">My Technical Skills</span>
         <div class="skills-content container">
           <div class="skills-name">Python</div>
-          <div class="skills-name">Java</div>
-          <div class="skills-name">Sql</div>
-          <div class="skills-name">Google Cloud Platform</div>
+          <div class="skills-name">Networking</div>
+          <div class="skills-name">Operating Systems</div>
+          <div class="skills-name">Vulnerability Assessment</div>
+          <div class="skills-name">Endpoint Security</div>
+          <div class="skills-name">Ethical Hacking</div>
+          <div class="skills-name">SIEM Tools</div>
+          <div class="skills-name">Network security</div>
+          <div class="skills-name">Cryptography</div>
       </div>
       </section>
       <section class="qualification section">
