--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
             <li class="nav-item">
               <a href="#Qualification" class="nav-link"
-                ><i class="fa-solid fa-bars nav-icon"></i> Qualification</a
+                ><i class="fa-solid fa-briefcase nav-icon"></i> Qualification</a
               >
            </li>
             <li class="nav-item">
