--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </li>
             <li class="nav-item">
               <a href="#Qualification" class="nav-link"
-                ><i class="fa-solid fa-briefcase nav-icon"></i> Qualification</a
+                ><i class="fa-solid fa-graduation-cap nav-icon"></i> Qualification</a
               >
            </li>
             <li class="nav-item">
@@ -153,21 +153,21 @@
 Gathering, and Cryptography. Passionate about learning and building practical skills to protect digital systems from emerging threats!
             <div class="about-info">
               <div>
-                <span class="about-info-title">01+</span>
+                <span class="about-info-title">0.6+</span>
                 <span class="about-info-name"
                   >Years <br />
                   experience</span
                 >
               </div>
               <div>
-                <span class="about-info-title">5+</span>
+                <span class="about-info-title">3</span>
                 <span class="about-info-name"
                   >Completed <br />
                   project</span
                 >
               </div>
               <div>
-                <span class="about-info-title">2+</span>
+                <span class="about-info-title">1</span>
                 <span class="about-info-name"
                   >Companies <br />
                   worked</span
@@ -294,8 +294,8 @@ Gathering, and Cryptography. Passionate about learning and building practical sk
               <!-- qualifi 1 -->
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">Google Cloud Platform</h3>
-                  <span class="qualification-subtitle">Google Cloud</span>
+                  <h3 class="qualification-title">Cyber Security Trainee</h3>
+                  <span class="qualification-subtitle">Skillogic</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
                     2025  - Present
@@ -399,7 +399,7 @@ Gathering, and Cryptography. Passionate about learning and building practical sk
           <div class="footer-container container grid">
             <div>
               <h1 class="footer-title">Puri jagannadh Ulapalli</h1>
-              <span class="footer-subtitle">Graduate Trainee</span>
+              <span class="footer-subtitle">Cyber Security Trainee</span>
             </div>
             <ul class="footer-links">
              <li>
@@ -412,7 +412,7 @@ Gathering, and Cryptography. Passionate about learning and building practical sk
 
             <div class="footer-socials">
               <a
-                href="https://www.linkedin.com/in/puri-jagannadh-ulapalli-b18104253/"
+                href="https://www.linkedin.com/in/puri-jagannadh-ulapalli"
                 target="_blank"
                 class="footer-social"
               >
