--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ Gathering, and Cryptography. Passionate about learning and building practical sk
 
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">Salesforce Administrator</h3>
+                  <h3 class="qualification-title">Salesforce Administrator virtual Internship</h3>
                   <span class="qualification-subtitle">Salesforce</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
