--- a/index.html
+++ b/index.html
@@ -390,6 +390,19 @@ Gathering, and Cryptography. Passionate about learning and building practical sk
                 <a
                   href="mailto:jagannadhulapalli@gmail.com">jagannadhulapalli@gmail.com</a>
                >
+             </div>
+           </div>
+             <div class="contact-info">
+               <i class="fa-brands fa-linkedin-in contact-icon"></i>
+               <div>
+                <h3 class="contact-title">Linkedin</h3>
+                <a
+                  class="contact-subtitle"
+                  href="https://www.linkedin.com/in/puri-jagannadh-ulapalli"
+                  target="_blank"
+                >
+              </div>
+            </div>
         </div>
       </section>
 
