--- a/index.html
+++ b/index.html
@@ -389,20 +389,18 @@ Gathering, and Cryptography. Passionate about learning and building practical sk
                 <h3 class="contact-title">Email</h3>
                 <a
                   href="mailto:jagannadhulapalli@gmail.com">jagannadhulapalli@gmail.com</a>
-               >
-             </div>
            </div>
              <div class="contact-info">
                <i class="fa-brands fa-linkedin-in contact-icon"></i>
                <div>
                 <h3 class="contact-title">Linkedin</h3>
                 <a
-                  href="https://www.linkedin.com/in/puri-jagannadh-ulapalli"
+                  href="https://www.linkedin.com/in/puri-jagannadh-ulapalli">@Puri jagannadh ulapalli</a>
                 >
               </div>
             </div>
-        </div>
-      </section>
+         </div>
+     </section>
 
       <!-- footer  -->
       <footer class="footer">
