--- a/index.html
+++ b/index.html
@@ -395,12 +395,13 @@ Gathering, and Cryptography. Passionate about learning and building practical sk
                <div>
                 <h3 class="contact-title">Linkedin</h3>
                 <a
-                  href="https://www.linkedin.com/in/puri-jagannadh-ulapalli">@Purijagannadhulapalli</a>
+                  href="https://www.linkedin.com/in/puri-jagannadh-ulapalli">@Purijagannadhulapalli</a
                 >
               </div>
             </div>
-         </div>
-     </section>
+          </div>
+        </div>    
+      </section>
 
       <!-- footer  -->
       <footer class="footer">
